<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_save_game"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/nvm"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/nvm_label"
            android:onClick="rename"/>

        <Button
            android:id="@+id/ok"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/ok_label"
            android:onClick="rename"/>
    </LinearLayout>
</LinearLayout>