<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_gravity="center_horizontal"
    android:background="@color/standard_background_color">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chess_label"
            android:textSize="40sp"
            android:textColor="@color/standard_text_color"
            android:layout_margin="15dp"
            android:layout_gravity="center"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/new_game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:text="@string/new_game_label"
            android:textSize="20sp"
            android:backgroundTint="@color/standard_button_color"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/cont_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cont_game_label"
            android:textSize="20sp"
            android:layout_margin="15dp"
            android:backgroundTint="@color/standard_button_color"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/prev_games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prev_games_label"
            android:textSize="20sp"
            android:layout_margin="15dp"
            android:backgroundTint="@color/standard_button_color"/>
    </TableRow>
</TableLayout>