<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_play_edit_game"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="20dp"
    android:background="@color/standard_background_color">

   <Button
       android:id="@+id/play"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Play"
       android:backgroundTint="@color/standard_button_color"
       android:onClick="playGame"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/rename"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/rename_hint"/>

        <Button
            android:id="@+id/ok"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/ok_label"
            android:backgroundTint="@color/standard_button_color"
            android:onClick="rename"/>
    </LinearLayout>

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_label"
        android:backgroundTint="@color/delete_button_color"
        android:onClick="delete"/>

</LinearLayout>